bin_PROGRAMS=cpulimit

cpulimit_SOURCES=\
    vendor/ermshiperete/getopt/getoptLib/getopt.c vendor/ermshiperete/getopt/getoptLib/getopt.h \
    clsettings.cpp clsettings.h \
    cpulimit.cpp cpulimit.h \
    RTL_calls.cpp RTL_calls.h \
    MyExceptionHandler.cpp MyExceptionHandler.h \
    stdafx.cpp stdafx.h \
    comandline.cpp comandline.h \
    functions.cpp functions.h \
    targetver.h
    